Completed portfolio project

--- a/apps/weather-appv2/index-weatherV2.html
+++ b/apps/weather-appv2/index-weatherV2.html
@@ -21,48 +21,43 @@
   </head>
   <body>
 
-    <div class="title">
-      <h1>Weather Forecast</h1>
-    </div>
-
       <div class="container">
 
         <div class="top-half">
             <div class="place">
-              <h1>City, Country</h1>
-              <h2>Friday</h2>
-              <h3>January 14, 2017</h2>
-              <h3>0:00 am</h3>
+              <h1 id="city">City, Countryaaaaaaaaaaaaaaaaaa</h1>
+              <h2 id="day">Friday</h2>
+              <h3 id="moDayYear">January 14, 2017</h2>
+              <h3 id="time">00:00 am</h3>
             </div>
             <div class="glyph-container">
               <div id="glyph">
-                <i class="wi wi-night-sleet"></i>
+                <i></i>
               </div>
             </div>
         </div>
         <div class="btm-half">
           <div class="tempBin">
-            <h1>50 &#8457;/ &#8451;</h2>
+              <h2 id="description">Description</h2>
+              <h1 id="tempNow">50 &#8457;</h1>
           </div>
           <div class="moreInfoBin">
             <ul class="categories">
-              <li>Wind Speed</li>
+              <li>Max Temp</li>
+              <li>Min Temp</li>
               <li>Humidity</li>
-              <li>Pressure</li>
-              <li>Sunrise</li>
-              <li>Sunset</li>
             </ul>
             <ul class="values">
-              <li>0 mph</li>
-              <li>0 %</li>
-              <li>0 hPa</li>
-              <li>0:00 am</li>
-              <li>0:00 pm</li>
+              <li id="maxTempVal">0 &#8457;</li>
+              <li id="minTempVal">0 &#8457;</li>
+              <li id="humidity">0 %</li>
             </ul>
           </div>
         </div>
 
       </div>
+
+        <p class="wait">Working</p>
 
   </body>
 </html>
